
Make
====

There are currently no changes from the official MSYS2 distribution.

BusyBox
=======

There are currently no changes from the official BusyBox distribution.

Build
=====

[2018-04-26]

- v2.11 released
- build with the latest XBB scripts

[2018-01-03]

- v2.10 released
- update to make 4.2.1
- update to latest busybox rmyorston commit 096aee2bb468d1ab044de36e176ed1f6c7e3674d
- no more setup.exe files

[2017-06-29]

- v2.9-20170629 released
- updated to rebranded helper

[2017-06-07]

- v2.9-20170607 released
- rebranded GNU MCU Eclipse
- use busybox rmyorston commit c2002eae394c230d6b89073c9ff71bc86a7875e8

[2016-11-22]

- v2.8-20161122 release
- mkdir.exe added, as a copy of busybox.exe
- use busybox rmyorston commit 9fa1e4990e655a85025c9d270a1606983e375e47

[2016-10-28]

- v2.7-20161028 released
- the NSIS script was fixed (add InstallDir) so silent install should honour /D
- try make 4.2, but build failed, it requires gettext-0.19.4, not available on Debian 8; stick with make 4.1
- use busybox rmyorston commit 977d65c1bbc57f5cdd0c8bfd67c8b5bb1cd390dd

[2015-07-16]

- v2.6-201507152002 released

[2015-05-14]

- v2.5 internal release
- the build script was updated to run under Docker.
- use make-4.1.3
- use busybox rmyorston commit ec39cb770ddd5c0e085d5c4ee10be65bab5e7a44

[2015-03-24]

- v2.4-201503242026 released

[2015-03-22]

- the NSIS script was fixed to prevent removing the keys when 
uninstalling an older version.

[2015-03-21]

- v2.4-201503212005 released

[2015-01-25]

- v2.3-201501242223 released

[2015-01-24]

- v2.2-201501232303 released

[2015-01-22]

- v2.1-201501221704 released


Liviu Ionescu